gcc/testsuite/g++.dg/cpp0x/constexpr-redeclaration4.C
@@ -1,0 +1,14 @@
+// PR c++/111132
+// { dg-do compile { target c++11 } }
+
+constexpr bool bar(void) {
+    return true;
+}
+
+constexpr bool bar(void);
+
+constexpr bool foo() {
+    return bar();
+}
+
+static_assert(foo(), "");
